20121102 - fhabermann
* added bootom bar with version and social links

20121101 - fhabermann
* bootstrap update to 2.2.1

20121027 - fhabermann
* added mssql dump
* fixed problems with mssql connection

20121020 - fhabermann
* added knowledgeroot_date object to content und page class

20121019 - fhabermann
* added new class Knowledgeroot_Date for datetime handling

20121018 - fhabermann
* fixed sqlite problems
* added Knowledgeroot_Db class to handle database adapter true and false
* using dojo 1.7.2 because of tree layout problems

20121012 - fhabermann
* added firebug profiler for database
* jquery update to 1.8.2
* added first file upload form

20121011 - fhabermann
* added guest user to dump
* fixed problem with guest user and page and content class
* removed old reference to js file
* added install instructions

20121009 - fhabermann
* added demo dump for postgresql
* added new database dumps
* set and renamed functions for knowledgeroot classes

20120917 - fhabermann
* updated license to BSD license
* removed all old unused stuff
* started new changelog