@@ -1,5 +1,6 @@
 20121102 - fhabermann
 * added bootom bar with version and social links
+* added FileManager
 
 20121101 - fhabermann
 * bootstrap update to 2.2.1
